# delcechfiltr

./: LICENSE.txt  README.md  setup.py
delcechfiltr/: dgms.py  tetra.py  tri.py
delcechfiltr/cpp/: CMakeLists.txt  binding.cpp
delcechfiltr/cpp/inc/: tetrahedron.hpp  triangle.hpp
delcechfiltr/cpp/src/: tetrahedron.cpp  triangle.cpp
test/: test_tri.py
